--- a/TextControlsofHani/Base.lproj/Main.storyboard
+++ b/TextControlsofHani/Base.lproj/Main.storyboard
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +12,73 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TextControlsofHani" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="EnterEmail" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lUl-ne-sSp">
+                                <rect key="frame" x="16" y="157" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ns6-oy-6iK">
+                                <rect key="frame" x="67.5" y="228" width="240" height="128"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="I89-rZ-qsd"/>
+                                    <constraint firstAttribute="height" constant="128" id="X1g-CQ-4qF"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Wb-96-5zD">
+                                <rect key="frame" x="164.5" y="410" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="46" id="7Uh-h2-KxH"/>
+                                    <constraint firstAttribute="height" constant="30" id="buA-aL-UtO"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="OnClickofButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2kZ-cz-0M3"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pUu-CI-XeE">
+                                <rect key="frame" x="16" y="466" width="343" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="esl-NX-zjG"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.3276158859861581" blue="0.07276778209141499" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="pUu-CI-XeE" firstAttribute="centerX" secondItem="3Wb-96-5zD" secondAttribute="centerX" id="1fH-aP-beU"/>
+                            <constraint firstItem="3Wb-96-5zD" firstAttribute="top" secondItem="ns6-oy-6iK" secondAttribute="bottom" constant="54" id="5i7-B7-RJc"/>
+                            <constraint firstItem="lUl-ne-sSp" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="137" id="9gG-Ml-8pi"/>
+                            <constraint firstItem="pUu-CI-XeE" firstAttribute="top" secondItem="3Wb-96-5zD" secondAttribute="bottom" constant="26" id="DQo-O0-MiY"/>
+                            <constraint firstItem="lUl-ne-sSp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="EuP-F5-mMm"/>
+                            <constraint firstItem="ns6-oy-6iK" firstAttribute="centerX" secondItem="lUl-ne-sSp" secondAttribute="centerX" id="Nbp-9j-u0R"/>
+                            <constraint firstItem="pUu-CI-XeE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="e9k-TY-nAP"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="lUl-ne-sSp" secondAttribute="trailing" constant="16" id="gQK-Nt-WIa"/>
+                            <constraint firstItem="3Wb-96-5zD" firstAttribute="centerX" secondItem="ns6-oy-6iK" secondAttribute="centerX" id="jsF-0R-0Gp"/>
+                            <constraint firstItem="ns6-oy-6iK" firstAttribute="top" secondItem="lUl-ne-sSp" secondAttribute="bottom" constant="41" id="olQ-Wg-19T"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="pUu-CI-XeE" secondAttribute="trailing" constant="16" id="re9-U9-PSj"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="LabelDetails" destination="pUu-CI-XeE" id="qAR-vg-L5K"/>
+                        <outlet property="TextViewDescription" destination="ns6-oy-6iK" id="org-ol-dqS"/>
+                        <outlet property="txtFieldUserName" destination="lUl-ne-sSp" id="mhO-cW-hXs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="133.59999999999999" y="133.5832083958021"/>
         </scene>
     </scenes>
 </document>
